# liteplayer

./: .gitignore  .gitmodules  README.md  build.sh  readme.md
adapter/: alsa_wrapper.c  alsa_wrapper.h  alsastub_wrapper.c  alsastub_wrapper.h  fatfs_wrapper.c  fatfs_wrapper.h  httpclient_wrapper.c  httpclient_wrapper.h  httpstub_wrapper.c  httpstub_wrapper.h  opensles_wrapper.c  opensles_wrapper.cpp  opensles_wrapper.h  pcmout_wrapper.c  pcmout_wrapper.h  sink_alsa_wrapper.c  sink_alsa_wrapper.h  sink_opensles_wrapper.cpp  sink_opensles_wrapper.h  sink_wave_wrapper.c  sink_wave_wrapper.h  source_fatfs_wrapper.c  source_fatfs_wrapper.h  source_file_wrapper.c  source_file_wrapper.h  source_httpclient_wrapper.c  source_httpclient_wrapper.h  tinyalsa_wrapper.c  tinyalsa_wrapper.h  wave_wrapper.c  wave_wrapper.h
android/demo/: .gitignore  README.md
android/demo/example/src/main/assets/: test.m4a
android/jni/: Android.mk
builds/: build.sh
builds/android/jni/: Android.mk  Application.mk
builds/esp32/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
builds/esp32/components/esp_peripherals/: CMakeLists.txt  component.mk
builds/esp32/components/esp_peripherals/audio_codec/: audio_hal.c  audio_hal.h
builds/esp32/components/esp_peripherals/audio_codec/driver/es7243/: es7243.c  es7243.h
builds/esp32/components/esp_peripherals/audio_codec/driver/es8311/: es8311.c  es8311.h
builds/esp32/components/esp_peripherals/audio_codec/driver/include/: esxxx_common.h
builds/esp32/components/esp_peripherals/i2c_bus/: i2c_bus.c  i2c_bus.h
builds/esp32/components/liteplayer_adapter/: CMakeLists.txt  component.mk  sink_ESP32-LyraT-Mini_wrapper.c  sink_ESP32-LyraT-Mini_wrapper.h  sink_esp32_i2s_wrapper.c  sink_esp32_i2s_wrapper.h
builds/esp32/components/liteplayer_core/: CMakeLists.txt  component.mk
builds/esp32/components/sysutils/: CMakeLists.txt  component.mk
builds/esp32/main/: CMakeLists.txt  liteplayer_demo.c
builds/esp8266/: CMakeLists.txt  Makefile
builds/esp8266/components/liteplayer_adapter/: CMakeLists.txt  component.mk  sink_esp8266_i2s_wrapper.c  sink_esp8266_i2s_wrapper.h  source_esp8266_builtin_wrapper.c  source_esp8266_builtin_wrapper.h
builds/esp8266/components/liteplayer_core/: CMakeLists.txt  component.mk
builds/esp8266/components/sysutils/: CMakeLists.txt  component.mk
builds/esp8266/main/: CMakeLists.txt  liteplayer_demo.c  liteplayer_main.c
example/android/: settings.gradle
example/android/example/: build.gradle
example/android/example/src/main/: AndroidManifest.xml
example/android/example/src/main/java/com/example/liteplayerdemo/: MainActivity.java
example/basic_demo/: CMakeLists.txt  CMakeLists.txt.pvmp3.fdkaac  basic_demo.c
example/esp32/: README.md
example/esp32/components/liteplayer_adapter/: CMakeLists.txt
example/esp32/components/liteplayer_core/: CMakeLists.txt
example/esp32/components/liteplayeradapter/: CMakeLists.txt
example/esp32/components/liteplayercore/: CMakeLists.txt
example/esp32/components/sysutils/: CMakeLists.txt
example/esp32/main/: CMakeLists.txt
example/fatfs_m4aplayer/: CMakeLists.txt  CMakeLists.txt-faad2  fatfs_m4aplayer.c
example/fatfs_mp3player/: CMakeLists.txt  fatfs_mp3player.c
example/liteplayer_demo/: CMakeLists-madmp3-helixaac.txt  CMakeLists-mp3mad-aachelix.txt  CMakeLists.txt  liteplayer_demo.c
example/liteplayer_mngr/: CMakeLists.txt  liteplayer_mngr.c
example/liteplayermngr_demo/: CMakeLists.txt  liteplayermngr_demo.c
example/playlist_demo/: CMakeLists.txt  playlist_demo.c
example/tts_demo/: CMakeLists.txt  tts_demo.c
example/unix/: CMakeLists.txt  CMakeLists.txt.pvmp3.fdkaac
player/: CMakeLists.txt  liteplayer_adapter.h  liteplayer_config.h  liteplayer_debug.c  liteplayer_debug.h  liteplayer_main.c  liteplayer_main.h  liteplayer_manager.c  liteplayer_manager.h  liteplayer_parser.c  liteplayer_parser.h  liteplayer_source.c  liteplayer_source.h
src/: CMakeLists.txt  CMakeLists.txt.opensource
src/audio_decoder/: aac_fdk_wrapper.c
tools/: README.md  readme.md  socket_upload.py
